-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-aarch64, 9, 10, 11
-
Component/s: hotspot
-
b13
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248491 | 11.0.9-oracle | Andrew Haley | P2 | Closed | Fixed | b01 |
| JDK-8221217 | 11.0.4 | Andrew Haley | P2 | Resolved | Fixed | b01 |
| JDK-8220670 | 11.0.3 | Andrew Haley | P2 | Resolved | Fixed | b04 |
| JDK-8260823 | openjdk8u292 | Andrew Hughes | P2 | Resolved | Fixed | b01 |
This is a dup of bug 8209637.
- backported by
-
JDK-8220670 [AArch64] Interpreter and c1 don't correctly handle jboolean results in native calls
-
- Resolved
-
-
JDK-8221217 [AArch64] Interpreter and c1 don't correctly handle jboolean results in native calls
-
- Resolved
-
-
JDK-8260823 [AArch64] Interpreter and c1 don't correctly handle jboolean results in native calls
-
- Resolved
-
-
JDK-8248491 [AArch64] Interpreter and c1 don't correctly handle jboolean results in native calls
-
- Closed
-
- relates to
-
JDK-8209637 [s390x] Interpreter doesn't call result handler after native calls
-
- Closed
-
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-