8211064: [AArch64] Interpreter and c1 don't correctly handle jboolean results in native calls

Reviewed-by: aph